fixed spacing on home screen

--- a/src/layout/Home.css
+++ b/src/layout/Home.css
@@ -5,6 +5,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 20px;
+}
+
+.home div {
+  padding: 10px 0px 10px 0px;
 }
 
 @keyframes fadeIn {
@@ -67,6 +72,11 @@
 }
 #name {
   font-size: 60px;
+}
+
+#contact {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 @media all and (max-width: 935px) {
